Fix scrolling bug on small heights

--- a/style.css
+++ b/style.css
@@ -40,7 +40,7 @@ body {
 .background {
   width: 100%;
   height: 100%;
-  position: absolute;
+  position: fixed;
   left: 0;
   top: 0;
   z-index: -1;
